# proyecto-final-BDS-G3

./: README.md
predictor-api/: .gitignore  requirements.txt  run.py
predictor-api/app/: __init__.py  config.py
predictor-api/app/bp_api/: models.py  resources.py  schemas.py
predictor-api/app/bp_web/: __init__.py
predictor-api/app/templates/: index.html
predictor-package/: MANIFEST.in  README.md  setup.cfg  test.py
predictor-package/vivienda_predictor/: __init__.py  predictor.py
predictor-package/vivienda_predictor/ml-model/: model.pkl  scaler_x.pkl  scaler_y.pkl
predictor-test/: main.py  requirements.txt  vivienda_predictor-0.1-py3-none-any.whl
