
[metadata]
name = vivienda_predictor
version = 0.1
author = Javier Chacnama
description = Paquete para predecir valor de vivienda
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
include_package_data = true
install_requires =
    numpy
    scikit-learn
    joblib
python_requires = >=3.7
